# AiQuantSys

./: .env.example  README.md  pyproject.toml
app/: __init__.py  config.py  logging_config.py  main.py
docs/design/: US_STOCK_AI_QUANT_SYSTEM_DESIGN.md
tests/: test_allocation.py  test_alpaca_adapter.py  test_market_calendar.py  test_order_validator.py  test_universe_filter.py
us_stock/: __init__.py
us_stock/api/: __init__.py  broker_routes.py  routes.py
us_stock/brokers/: __init__.py  alpaca.py  base.py  factory.py  models.py
us_stock/calendar/: __init__.py  market_calendar.py  session_state.py
us_stock/execution/: __init__.py  order_validator.py
us_stock/llm/: __init__.py  models.py
us_stock/risk/: __init__.py  allocation.py
us_stock/universe/: __init__.py  filters.py  models.py
